Fix scrollbar issue with arrow

--- a/theme/home.less
+++ b/theme/home.less
@@ -115,6 +115,7 @@
     color: @primaryColor;
     top: 0;
     opacity: 0.7;
+    overflow: hidden;
 }
 .carouselarrow:hover, .carouselarrow:focus{
     opacity: 1;
